# logpyle

./: .gitignore  .readthedocs.yml  .rtd-env-py3.yml  LICENSE  README.md  pyproject.toml  requirements.txt  run-mypy.sh  setup.cfg  setup.py  web-interface.html
.github/workflows/: ci.yaml  codeql-analysis.yml  log_gathered_v2.sqlite  log_gathered_v3.sqlite  log_gathered_v4.sqlite  log_ungathered_v2.sqlite  log_ungathered_v3.sqlite  log_ungathered_v4.sqlite
HTMLalizer/: main.css  main.py  setup.py  temp.html  web-interface.html
HTMLalizer/templates/: index.html  newFile.html
HTMLalyzer/: __init__.py  logpyle-2023.2.3-py2.py3-none-any.whl  main.css  main.js  main.py  modifiedLogpyle.py  modifiedRunalyzer.py  modifiedRunalyzerGather.py  setup.py  web-interface.html
HTMLalyzer/templates/: index.html  newFile.html
doc/: Makefile  analysis.rst  api.rst  conf.py  index.rst  log.rst  misc.rst
examples/: log-mpi.py  log.py  optional-log.py
logpyle/: __init__.py  pandalyzer.py  runalyzer.py  runalyzer_gather.py  upgrade_db.py  utils.py  version.py
logpyle/HTMLalyzer/: __init__.py  file_hashes.txt  htmlalyzer.html  main.css  main.js  main.py  pymbolic-2022.2-py3-none-any.whl  web-interface.html
logpyle/HTMLalyzer/templates/: index.html  newFile.html
test/: .gitignore  assert_cov.py  conftest.py  coverage.sh  coverage_html.sh  keywordTest.sh  test_distributed.py  test_gather.py  test_logManager.py  test_quantities.py  test_upgrade_db.py  testlib.py
