[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist.force-include]
"bin/htmlalyzer" = "logpyle/htmlalyzer"
"bin/logtool" = "logpyle/logtool"
"bin/runalyzer" = "logpyle/runalyzer"
"bin/runalyzer-gather" = "logpyle/runalyzer-gather"
"bin/upgrade-db" = "logpyle/upgrade-db"

[tool.hatch.build.targets.wheel.force-include]
"bin/htmlalyzer" = "logpyle/htmlalyzer"
"bin/logtool" = "logpyle/logtool"
"bin/runalyzer" = "logpyle/runalyzer"
"bin/runalyzer-gather" = "logpyle/runalyzer-gather"
"bin/upgrade-db" = "logpyle/upgrade-db"

[project]
name = "logpyle"
version = "2024.0"
authors = [
  { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
description = "Time series logging for Python"
dependencies = [
    "pytools>=2011.1",
    "pymbolic",
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/illinois-ceesd/logpyle/"
"Bug Tracker" = "https://github.com/illinois-ceesd/logpyle/issues"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pycodestyle
]

extend-ignore = [
    "G004", # Logging statement uses f-string
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"


[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.typos.files]
extend-exclude = [
]
