[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files = [
    "bin/htmlalyzer",
    "bin/logtool",
    "bin/pandalyzer",
    "bin/runalyzer-gather",
    "bin/runalyzer",
    "bin/upgrade-db",
]

[project]
name = "logpyle"
version = "2025.0"
authors = [
  { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
description = "Time series logging for Python"
dependencies = [
    "pytools>=2025.1.2",
    "pymbolic",
    "pandas",
    "sqlalchemy",
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/illinois-ceesd/logpyle/"
Documentation = "https://logpyle.rtfd.io/en/latest"
Issues = "https://github.com/illinois-ceesd/logpyle/issues"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pycodestyle
]

extend-ignore = [
    "G004", # Logging statement uses f-string
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.typos.files]
extend-exclude = [
]
